--- a/publications.html
+++ b/publications.html
@@ -58,14 +58,23 @@
 			
 					<!-- First Publication -->
 					<div class="publication" style="background-color: white; padding: 20px; border-radius: 8px; margin-bottom: 30px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
-						<h3 style="text-align: center; font-family: 'Arial', sans-serif; color: #333;">Momentary Stressor Logging and Reflective Visualizations: Implications for Stress Management with Wearables</h3>
-						<p style="text-align: center; font-family: 'Arial', sans-serif; color: #555; font-style: italic;">CHI '24: Proceedings of the 2024 CHI Conference on Human Factors in Computing Systems</p>
+						<h3 style="text-align: center; font-family: 'Arial', sans-serif; color: #333;">
+							Momentary Stressor Logging and Reflective Visualizations: Implications for Stress Management with Wearables
+						</h3>
+						<p style="text-align: center; font-family: 'Arial', sans-serif; color: #555; font-style: italic;">
+							CHI '24: Proceedings of the 2024 CHI Conference on Human Factors in Computing Systems
+						</p>
 						<div style="text-align: center; margin-top: 20px;">
-							<a href="https://dl.acm.org/doi/10.1145/3613904.3642662" target="_blank" style="background-color: #0073e6; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; font-family: 'Arial', sans-serif;">Read Full Publication</a>
+							<a href="https://dl.acm.org/doi/10.1145/3613904.3642662" target="_blank" 
+							   style="background-color: #0073e6; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; font-family: 'Arial', sans-serif;">
+								Read Full Publication
+							</a>
+						</div>
+						<div style="text-align: center; margin-top: 20px;">
+							<p style="font-family: 'Arial', sans-serif; color: #333; font-weight: bold;">Watch Presentation:</p>
 							<iframe width="630" height="473" src="https://www.youtube.com/embed/PGwZs8tZFaY" frameborder="0" allowfullscreen></iframe>
 						</div>
 					</div>
-			
 					<!-- Future publications can be added here -->
 				</div>
 			</section>
