--- a/publications.html
+++ b/publications.html
@@ -59,7 +59,7 @@
 					<!-- First Publication -->
 					<div class="publication" style="background-color: white; padding: 20px; border-radius: 8px; margin-bottom: 30px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
 						<h3 style="text-align: center; font-family: 'Arial', sans-serif; color: #333;">
-							Momentary Stressor Logging and Reflective Visualizations: Implications for Stress Management with Wearables
+							<b>Momentary Stressor Logging and Reflective Visualizations: Implications for Stress Management with Wearables</b>
 						</h3>
 						<p style="text-align: center; font-family: 'Arial', sans-serif; color: #555; font-style: italic;">
 							CHI '24: Proceedings of the 2024 CHI Conference on Human Factors in Computing Systems
@@ -71,8 +71,8 @@
 							</a>
 						</div>
 						<div style="text-align: center; margin-top: 20px;">
-							<p style="font-family: 'Arial', sans-serif; color: #333; font-weight: bold;">Watch Presentation:</p>
-							<iframe width="630" height="473" src="https://www.youtube.com/embed/PGwZs8tZFaY" frameborder="0" allowfullscreen></iframe>
+							<p style="font-family: 'Arial', sans-serif; color: #333; font-weight: bold;">Video Presentation</p>
+							<iframe width="730" height="473" src="https://www.youtube.com/embed/PGwZs8tZFaY" frameborder="0" allowfullscreen></iframe>
 						</div>
 					</div>
 					<!-- Future publications can be added here -->
